[tool.poetry]
name = "awstower"
version = "0.1.0"
description = ""
authors = ["Adam Brokes <abrokes@atlassian.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.21.14"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
